fix some issues in swagger
